[gd_scene load_steps=8 format=2]

[ext_resource path="res://Items/Inventory.gd" type="Script" id=1]
[ext_resource path="res://sprites/dog/l0.png" type="Texture" id=2]
[ext_resource path="res://sprites/dog/l2.png" type="Texture" id=3]
[ext_resource path="res://sprites/dog/l1.png" type="Texture" id=4]
[ext_resource path="res://sprites/cavestuff/ball.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "bounce_item"
length = 0.4
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("hatsprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.1, 0.14, 0.22, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 183.301, 76.3755 ), Vector2( 183.301, 76.3755 ), Vector2( 183.301, 80.673 ), Vector2( 183.301, 76.3755 ), Vector2( 183.301, 70.4666 ), Vector2( 183.301, 76.3755 ) ]
}

[node name="Inventory" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="List" type="Panel" parent="."]
margin_left = 49.0
margin_top = 184.0
margin_right = 918.0
margin_bottom = 965.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="List"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="List/MarginContainer"]
margin_right = 789.0
margin_bottom = 701.0
rect_clip_content = true

[node name="Title" type="Label" parent="List/MarginContainer/VBoxContainer"]
margin_right = 789.0
margin_bottom = 71.0
text = "ITEMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="List/MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 789.0
margin_bottom = 701.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ItemsList" type="VBoxContainer" parent="List/MarginContainer/VBoxContainer/ScrollContainer"]

[node name="Button" type="Button" parent="List"]
margin_left = 2.83325
margin_top = -139.535
margin_right = 274.833
margin_bottom = -35.535
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Panel" parent="."]
margin_left = 991.613
margin_top = 57.9032
margin_right = 1777.61
margin_bottom = 643.903
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Description"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Description/MarginContainer"]
margin_right = 705.0
margin_bottom = 505.0

[node name="ItemPicture" type="TextureRect" parent="Description/MarginContainer/VBoxContainer"]
margin_right = 705.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="Description/MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 705.0
margin_bottom = 75.0
autowrap = true

[node name="G_panel" type="Panel" parent="."]
margin_left = 996.0
margin_top = 715.0
margin_right = 1305.0
margin_bottom = 815.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="G_panel"]
margin_left = 18.9768
margin_top = 12.6512
margin_right = 122.977
margin_bottom = 84.6512
text = "0 G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 1383.57
margin_top = 720.549
margin_right = 1779.57
margin_bottom = 971.549
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Panel"]
position = Vector2( 187.217, 136.761 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Node2D" type="Node2D" parent="Panel"]
position = Vector2( -46.311, -2.3548 )

[node name="hatsprite" type="Sprite" parent="Panel/Node2D"]
position = Vector2( 183.301, 74.9659 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/Node2D"]
autoplay = "bounce_item"
anims/bounce_item = SubResource( 2 )
[connection signal="pressed" from="List/Button" to="." method="_on_Button_pressed"]
